# medexplain-evals

./: .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  RELEASE_PROCESS.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  run_benchmark.py  setup.py
.github/workflows/: ci.yml  docs.yml
analysis/: __init__.py  analyzer.py  error_analysis.py  report_generator.py  statistical_tests.py  visualizations.py
configs/: evaluation_config.yaml  models_config.yaml
data/: README.md
data/clinical_vignettes/: sample_vignettes.json
docs/: README.md  conf.py  data_loading.rst  evaluation_metrics.rst  index.rst  installation.rst  leaderboard.rst  quickstart.rst
docs/api/: audience_personas.rst  ensemble_judge.rst  index.rst  knowledge_grounding.rst  model_clients.rst  safety_evaluator.rst
evaluation/: README.md  validate_judge.py
examples/: basic_usage.py  meqbench_2_usage.py
scripts/: README.md  compute_scores.py  curate_dataset.py  dataset_validators.py  estimate_cost.py  generate_explanations.py  generate_splits.py  prepare_release.py  process_datasets.py  run_evaluation.py  run_full_benchmark.sh  validate_environment.py  validate_release.py
src/: __init__.py  api_client.py  audience_personas.py  benchmark.py  cli.py  config.py  data_loaders_v2.py  data_schema.py  ensemble_judge.py  evaluator.py  exceptions.py  knowledge_grounding.py  leaderboard.py  logging.py  model_clients.py  multimodal_evaluator.py  safety_evaluator.py  settings.py  strategies.py  validation.py
src/clients/: __init__.py  api_client.py  model_clients.py
src/core/: __init__.py  exceptions.py
src/data/: __init__.py  data_loaders.py  validation.py
src/evaluation/: __init__.py  ensemble_judge.py  multimodal_evaluator.py  safety_evaluator.py
src/evaluation/rubrics/: caregiver_rubric.py  patient_rubric.py
src/knowledge/: __init__.py  knowledge_grounding.py
src/personas/: __init__.py  prompt_templates.py
src/rubrics/: __init__.py  nurse_rubric.py  physician_rubric.py
tests/: README.md  conftest.py  test_api_client.py  test_benchmark.py  test_data_loaders.py  test_evaluator_metrics.py  test_exceptions.py  test_leaderboard.py  test_process_datasets.py  test_settings.py
web/: README.md
web/backend/app/: __init__.py  main.py
web/backend/app/api/v1/: __init__.py  playground.py
web/backend/app/models/: database.py
web/backend/app/services/: benchmark_service.py
web/backend/app/utils/: benchmark_adapter.py
web/frontend/: package-lock.json  package.json
web/frontend/src/app/: layout.tsx
web/frontend/src/app/dashboard/: page.tsx
web/frontend/src/app/dashboard/benchmarks/new/: page.tsx
web/frontend/src/app/dashboard/leaderboard/: page.tsx
web/frontend/src/app/dashboard/models/: page.tsx
web/frontend/src/app/dashboard/playground/: page.tsx
web/frontend/src/app/dashboard/tasks/: page.tsx
web/frontend/src/components/layout/: sidebar.tsx
web/frontend/src/components/ui/: radar-chart.tsx
